<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="mainViewModel"
            type="com.example.rockpaperscissors.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_activity"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/rock_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_rock"
            android:onClick="@{() -> mainViewModel.playGame(1)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/paper_button"
            app:layout_constraintEnd_toStartOf="@+id/paper_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/scissors_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_scissors"
            android:onClick="@{() -> mainViewModel.playGame(3)}"
            app:layout_constraintBaseline_toBaselineOf="@+id/paper_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/paper_button" />

        <Button
            android:id="@+id/paper_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/option_paper"
            android:onClick="@{() -> mainViewModel.playGame(2)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/scissors_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rock_button" />

        <TextView
            android:id="@+id/computer_label_text"
            style="@style/LabelStyle"
            android:text="@string/computer_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005" />

        <TextView
            android:id="@+id/you_label_text"
            style="@style/LabelStyle"
            android:text="@string/you_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39" />

        <TextView
            android:id="@+id/result_text"
            style="@style/LabelStyle"
            android:text="@string/result_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />

        <TextView
            android:id="@+id/computer_choice_text"
            style="@style/TextViewStyle"
            android:text="@{@string/computer_outcome(mainViewModel.computerOutcome)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:fontFamily="@font/roboto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computer_label_text" />

        <TextView
            android:id="@+id/your_choice_text"
            style="@style/TextViewStyle"
            android:layout_marginTop="16dp"
            android:text="@{@string/computer_outcome(mainViewModel.playerOutcome)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/you_label_text" />

        <TextView
            android:id="@+id/game_outcome_text"
            style="@style/TextViewStyle"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@{@string/result(mainViewModel.result)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>